deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tupan-web
  namespace: tupan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [tupan.exemplo.org]
      secretName: tupan-tls
  rules:
    - host: tupan.exemplo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tupan-web
                port:
                  number: 80
